# kubebox

./: LICENSE  README.md  pyproject.toml
examples/: .env.example  main.py
kubebox/: __init__.py  _client.py  _manager.py
kubebox/kubebox/: _manager.py
kubebox/kubebox/security/: __init__.py
kubebox/security/: _security.py
sandbox/: Dockerfile  main.tf  pyproject.toml
sandbox/sandbox/: main.py
sandbox/scripts/: build_sandbox.sh  publish_sandbox.sh
tests/: copy_repo.py
